  EntityRepository.setEntitySearchProperties() removed
  EntityTestUnit.createEntity() added
  Property.columnHasDefaultValue field added
  UiUtil.selectAllOnFocusGained() now clears the selection on focus lost
  FilteredComboBoxModel.nullValueItem renamed to nullValueString
  FilteredComboBoxModel.emptyStringIsNull boolean field added
  PropertyComboBoxModel sets emptyStringIsNull as true
  EntityEditModel.validate() now takes an action parameter
  EntityEditModel.validate() now takes into account if a column has a default value during null value validation
  EntityUiUtil.createEntityLookupField() now calls UiUtil.selectAllOnFocusGained() for the field
  Entity.validateType() added entity type validation for foreign keys
  EntityDb.delete(EntityCriteria) added
  SelectCriteria refactored out of EntityCriteria
  CriteriaUtil added, moved static helper methods there from EntityCriteria
  EntityTableSearchModel.setExactSearchValue renamed to setSearchValues and generalized, now takes a propertyID and a Collection of values
  Configuration.COMPACT_ENTITY_PANEL_LAYOUT added
  common.db.Database renamed to DatabaseProvider
  common.db.dbms.AbstractDatabase added
  common.db.dbms.Dbms renamed to Database
  EntityDbLocalProvider, EntityDbRemoteProvider set entityDb instance to null on disconnect
  SERVER_LOGGING_ON and SERVER_SECURE_CONNECTION properties changed from 1/0 to true/false
  EntityApplicationPanel.getHelpText() added
  EntityPanel.createStaticEntityPanel refactored and simplified
  Property.BooleanProperty.toSQLString() bug fixed, return null value on false
  Entity.doSetValue()/setValue() now returns the old value
  EntityUtil.copyEntities() added
  EntityPanel.updateSelectedEntities() now copies the selected entities before setting the value, hence no resetting the value on exception
  EntityUtil.getPropertyValues() renamed to getDistinctPropertyValues()