@@ -1,9 +1,7 @@
 /*
  * Copyright (c) 2009, Björn Darri Sigurðsson. All Rights Reserved.
  */
-package org.jminor.common.db;
-
-import org.jminor.common.db.dbms.Database;
+package org.jminor.common.db.dbms;
 
 public class DatabaseProvider {
 
