@@ -5,9 +5,9 @@ package org.jminor.framework.server;
 
 import org.jminor.common.db.ConnectionPoolSettings;
 import org.jminor.common.db.ConnectionPoolStatistics;
-import org.jminor.common.db.DatabaseProvider;
 import org.jminor.common.db.DatabaseStatistics;
 import org.jminor.common.db.User;
+import org.jminor.common.db.dbms.DatabaseProvider;
 import org.jminor.common.model.Util;
 import org.jminor.common.server.ClientInfo;
 import org.jminor.common.server.ServerLog;
