@@ -1,7 +1,7 @@
 package org.jminor.framework.client.model;
 
-import org.jminor.common.db.DatabaseProvider;
 import org.jminor.common.db.dbms.Database;
+import org.jminor.common.db.dbms.DatabaseProvider;
 import org.jminor.common.model.SearchType;
 import org.jminor.framework.Configuration;
 import org.jminor.framework.demos.empdept.domain.EmpDept;
