@@ -4,8 +4,8 @@
 package org.jminor.framework.db.criteria;
 
 import org.jminor.common.db.CriteriaSet;
-import org.jminor.common.db.DatabaseProvider;
 import org.jminor.common.db.dbms.Database;
+import org.jminor.common.db.dbms.DatabaseProvider;
 import org.jminor.common.model.SearchType;
 import org.jminor.framework.domain.Property;
 import org.jminor.framework.domain.Type;
